--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ pyOpenSSL==24.2.1
 redis==5.0.8
 service-identity==24.1.0
 setuptools==75.1.0
+shortuuid==1.0.13
 six==1.16.0
 sqlparse==0.5.1
 Twisted==24.7.0
