--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,12 @@ cryptography==43.0.1
 daphne==4.1.2
 dj-database-url==2.2.0
 Django==5.1.1
+django-admin-honeypot-updated-2021==1.2.0
 django-allauth==64.2.1
 django-cleanup==8.1.0
 django-environ==0.11.2
 django-htmx==1.19.0
+django-ipware==7.0.1
 gunicorn==23.0.0
 hyperlink==21.0.0
 idna==3.10
@@ -28,6 +30,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
 pyOpenSSL==24.2.1
+python-ipware==3.0.0
 redis==5.0.8
 service-identity==24.1.0
 setuptools==75.1.0
