--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2024.8.30
 cffi==1.17.1
 channels==4.1.0
 channels-redis==4.2.0
+charset-normalizer==3.3.2
 cloudinary==1.41.0
 constantly==23.10.4
 cryptography==43.0.1
@@ -13,7 +14,7 @@ daphne==4.1.2
 dj-database-url==2.2.0
 Django==5.1.1
 django-admin-honeypot-updated-2021==1.2.0
-django-allauth==64.2.1
+django-allauth==65.0.2
 django-cleanup==8.1.0
 django-environ==0.11.2
 django-htmx==1.19.0
@@ -23,15 +24,19 @@ hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
 msgpack==1.1.0
+oauthlib==3.2.2
 packaging==24.1
 pillow==10.4.0
 psycopg2-binary==2.9.9
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
+PyJWT==2.9.0
 pyOpenSSL==24.2.1
 python-ipware==3.0.0
 redis==5.0.8
+requests==2.32.3
+requests-oauthlib==2.0.0
 service-identity==24.1.0
 setuptools==75.1.0
 shortuuid==1.0.13
